changes to login page

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -160,7 +160,7 @@ p{
     outline: none;
     background: none;
     display: block;
-    margin: 20px auto;
+    margin: 0px 20px 20px 20px;
     text-align: center;
   border-color: #ffdf29;
   color: rgb(0, 0, 0);
