alert when register a event

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,4 +1,4 @@
-button {
+/* button {
     position: absolute;
     right:50px;
     top: 20px;
@@ -38,3 +38,4 @@ button:hover span:after {
    align-items: center;
    
 }
+*/
