--- a/assets/css/events.css
+++ b/assets/css/events.css
@@ -26,9 +26,9 @@ body {
       circle closest-side,
       gold 40%,
       #746bff 100%
-    );
+    );*/
     
-  }*/
+
   
   a {
     color: #0563bb;
@@ -194,6 +194,75 @@ body {
   .scrolled-offset {
     margin-top: 60px;
   }
+
+  #sliding-bar {
+    position: absolute;
+    height: 4px;
+    width: 100%;
+    background: rgb(255, 255, 255);
+    bottom: 0px;
+    transition: 0.5s;
+    border-radius: 4px;
+}
+
+.category-bar {
+    width: 100%;
+    margin: 0 auto;
+    background-color: rgb(0, 0, 0);
+    position: -webkit-sticky;
+    position: sticky;
+    top: 60px;
+    box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.5);
+    z-index: 10;
+}
+
+.category-bar nav{
+    display: flex;
+    justify-content: center;
+}
+
+.bullet ul {
+    list-style-type: disc !important;
+    text-align: left;
+}
+
+.category-bar a {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    
+    align-items: center;
+    justify-content: center;
+}
+.category-bar a:hover{
+    transform: scale(1.2);
+}
+
+.category-bar nav a {
+    height: 100%;
+    display: flex;
+    margin: 0 20px;
+}
+
+.category-bar nav a {
+    text-decoration: none;
+    color: white;
+    font-family: "dosis", sans-serif;
+    height: 100%;
+    padding: 10px;
+    display: flex;
+    font-weight: 600;
+    align-items: center;
+    justify-content: center;
+    font-size: 19px;
+    transition: 0.5s;
+}
+
+.category-bar nav a:hover {
+    
+    transition: 0.5s;
+}
 
 
 
@@ -630,3 +699,161 @@ body {
         -webkit-line-clamp: 3;
     }
 }
+
+
+/*--------------------------------------------------------------
+# Cards
+--------------------------------------------------------------*/
+.eventlist {
+    width: auto;
+    height: auto;
+    padding: 50px;
+    padding-top: 70px;
+    position: relative;
+    /*background-image: linear-gradient(#873FF8, #EB167F, #873FF8);
+    background: linear-gradient(-45deg, #ee7752, #f34d8d, #23a6d5, #23d5ab);
+    background-size: 300% 300%;
+    animation: gradient 15s ease infinite;*/
+}
+.eventlist .category {
+    margin-bottom: 50px;
+}
+.eventlist .categories {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/*#category-1 {
+    height: 500px;
+}
+
+#category-2 {
+    height: 500px;
+}
+
+#category-3 {
+    height: 500px;
+}*/
+
+.category h2 {
+    color: white;
+    text-align: center;
+    font-family: "Dosis", sans-serif;
+    font-size: 30px;
+    margin-top: 20px;
+    text-transform: uppercase;
+}
+
+
+
+.list .nos:hover {
+    cursor: pointer;
+}
+
+
+
+.list .nos:hover span {
+    text-shadow: #4df 0px 0px 6px, #4df 0px 0px 10px;
+}
+
+
+.transition { transition: all .3s ease-out }
+.category .nos{
+    padding-top: 64px;
+    padding-left: 24px;
+    position: relative;
+    width: 300px;
+    height: 300px;
+    border-radius: 8px;
+    display: block;
+    margin: 12px;
+    text-decoration: none;
+    background-color: rgb(37, 37, 37);
+    z-index: 0;
+    overflow:hidden;  
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12);  
+}
+
+
+
+
+.go-corner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    overflow: hidden;
+    top: 0;
+    right: 0;
+    background-color: gold;
+    border-radius: 0 8px 0 80px;
+  }
+  
+  
+  
+  .card .small{
+    margin-top: 20px;
+  }
+  .card h3{
+    font-weight: 600;
+    color:white;
+  }
+  .card p{
+    color: white;
+  }
+  
+  .card .event-logo{
+    height: 40px;
+    width: 40px;
+    margin-top: -15px;
+    margin-right: -15px;
+  }
+  .card:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: -16px;
+    right: -16px;
+    background: gold;
+    height: 32px;
+    width: 32px;
+    border-radius: 32px;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
+    -webkit-transition: -webkit-transform 0.25s ease-out;
+    transition: -webkit-transform 0.25s ease-out;
+    transition: transform 0.25s ease-out;
+    transition: transform 0.25s ease-out, -webkit-transform 0.25s ease-out;
+  }
+
+  .card:hover:before {
+    transition: transform 0.4s ease-out;
+    -webkit-transform: scale(30);
+            transform: scale(30);
+  }
+  .card:hover .event-logo{
+    transition: 0.3s ease-in;
+    filter: invert(100%);
+  }
+
+  .card:hover .go-corner{
+    transition: 0.3s ease-in;
+    background-color:	#202020;
+    border: 0px;
+  }
+  .card:hover h3 , .card:hover p{
+    color: black;
+  }
