--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -337,15 +337,6 @@ body {
 
 
 
-
-
-
-
-
-
-
-
-
 #particles-js{
   width: 100%;
   height: 100%;
@@ -354,4 +345,49 @@ body {
   position: fixed;
   top: 0px;
   z-index:-10;
+}
+
+
+
+*, *:after, *:before {
+  box-sizing: border-box;
+}
+
+input[type="checkbox"] {
+  visibility: hidden;
+}
+input[type="checkbox"]:checked + label {
+  transform: rotate(360deg);
+  background-color: #000;
+}
+input[type="checkbox"]:checked + label:before {
+  transform: translateX(30px);
+  background-color: #FFF;
+}
+label {
+  display: flex;
+  width: 60px;
+  height: 30px;
+  border: 6px solid;
+  border-radius: 99em;
+  position: absolute;
+  transition: transform 0.75s ease-in-out;
+  transform-origin: 50% 50%;
+  cursor: pointer;
+  left: 47%;
+  top: 18%;
+  
+}
+label:before {
+  transition: transform 0.75s ease;
+  transition-delay: 0.5s;
+  content: "";
+  display: block;
+  position: absolute;
+  width: 15px;
+  height: 14px;
+  background-color: #000;
+  border-radius: 50%;
+  top: 2px;
+  left: 2px;
 }
