--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -8,10 +8,16 @@ html,
 body {
     width: 100%;
     height: 100%;
-     margin-top: 100px;
     padding: 0;
-    background-color: white;
+    background-color:#1f2833 !important;
 }
+
+.padtb {
+  padding: 60px 0;
+}
+
+
+
 #header2 {
   
   height: 60px;
@@ -31,332 +37,291 @@ body {
   text-transform: uppercase;
   
 }
-
-
-ol, ul {
-  width: 100%;
-}
-
-.about-main {
-  padding-top: 50px;
+#features {
+  padding: 0px !important;
   overflow: hidden;
 }
 
 
-h1 {
-  background: -webkit-linear-gradient(#5afacb, #f64655);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-size: 19pt;
-  font-weight: 100;
-  float: left;
-  width: 100%;
-  text-align: center;
-  letter-spacing: 10px;
-  line-height: 50pt;
+
+
+.about .content {
+  background-color: #0b0c10;
+  padding: 40px;
+}
+
+.about h3 {
+  font-size: 14px;
+  font-weight: 700;
+  color: #c5c6c7;
   text-transform: uppercase;
-  font-family: "Francois One", sans-serif;
-  padding: 10px;
-  padding-bottom: 40px;
-  margin-top: 150px;
-  position: relative;
 }
 
-h1 span {
-  content: "";
-  width: 2px;
-  height: 50px;
-  float: left;
-  left: 50%;
-  position: absolute;
-  top: 100%;
-  background: -webkit-linear-gradient(top, #5afacb, #f64655);
-  mix-blend-mode: multiply;
+.about h2 {
+  font-size: 24px;
+  font-weight: 700;
+  color: #66fcf1;
 }
 
-.backShapes {
-  width: 100%;
-  height: auto;
-  position: absolute;
-  z-index: 0;
-  float: left;
-  font-family: "Francois One", sans-serif;
-  top: -245px;
-  left: -100px;
-  background: -webkit-linear-gradient(bottom, #5afacb, #f64655);
-  opacity: 0.3;
-  mix-blend-mode: multiply;
+.about p {
+  margin: 15px 0 30px 0;
+  line-height: 24px;
+  color: white;
+}
+
+.about .btn-read-more {
+  line-height: 0;
+  padding: 15px 40px;
+  border-radius: 50px;
+  transition: 0.5s;
+  color: #0b0c10;
+  background: #66fcf1;
+  
+  text-decoration: none;
+}
+
+.about .btn-read-more span {
+  font-family: "Nunito", sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  letter-spacing: 1px;
+}
+
+.about .btn-read-more i {
+  margin-left: 5px;
+  font-size: 18px;
+  transition: 0.3s;
+}
+
+.about .btn-read-more:hover i {
+  transform: translateX(5px);
+  color: #66fcf1;
   
 }
-
-.backShapes span {
-  width: 100%;
-  float: left;
-  margin: 0px;
-  position: relative;
-  background-color: rgba(255, 255, 255, 0.9);
-  mix-blend-mode: screen;
-  padding: 50px 0px 50px 0px;
+.about .btn-read-more:hover {
+  background: black;
+  box-shadow: 0 0 10px 0 #45A29E inset, 0 0 10px 4px #66FCF1;
+  color: #66fcf1;
 }
 
-.backShapes span .plus {
-  width: 400px;
-  float: left;
-  height: 400px;
-  position: relative;
-}
 
-.backShapes span .plus:after {
-  content: "";
-  position: absolute;
-  float: left;
-  width: 100%;
-  height: 70px;
-  left: 0;
-  background: #000;
-  top: 50%;
-  margin-top: -35px;
-}
-
-.backShapes span .plus:before {
-  content: "";
-  position: absolute;
-  float: left;
-  width: 70px;
+/*--------------------------------------------------------------
+# Features
+--------------------------------------------------------------*/
+.features .feature-box {
+  padding: 24px 20px;
+  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
+  transition: 0.3s;
   height: 100%;
-  left: 50%;
-  background: #000;
-  top: 0;
-  margin-left: -35px;
 }
 
-.backShapes span .circ {
-  width: 400px;
-  float: left;
-  height: 400px;
-  border-radius: 5000px;
-  border: 60px solid #000;
+.features .feature-box h3 {
+  font-size: 18px;
+  color: #012970;
+  font-weight: 700;
+  margin: 0;
 }
 
-.bottomPart {
-  width: 100%;
-  float: left;
-  position: relative;
-  padding: 0px;
-  z-index: 1;
+.features .feature-box i {
+  line-height: 0;
+  background: #ecf3ff;
+  padding: 4px;
+  margin-right: 10px;
+  font-size: 24px;
+  border-radius: 3px;
+  transition: 0.3s;
 }
 
-.bottomPart img {
-  width: 70%;
-  position: relative;
-  opacity: 0.9;
-  float: right;
-  padding: 0px;
-  bottom: 0px;
-  z-index: -10;
-  transition: all 0.4s ease;
-  -webkit-transition: all 0.4s ease;
-  transform: translate(0px, 0px);
-  -webkit-transform: translate(0px, 0px);
-}
-
-.bottomPart .gradLine {
-  content: '';
-  float: left;
-  position: absolute;
-  bottom: 0;
-  height: 30px;
-  right: 0;
-  width: 50%;
-  z-index: 10;
-  background: -webkit-linear-gradient(right, #5afacb, #f64655);
-  mix-blend-mode: multiply;
-  transition: all 0.8s ease;
-  -webkit-transition: all 0.8s ease;
-}
-
-.bottomPart .gradLine.open {
-  width: 85%;
-}
-
-.bottomPart .floatingText {
-  width: 100%;
-  top: 25%;
-  float: left;
-  padding: 10px;
-  padding-left: 7%;
-  z-index: 1000;
-  position: absolute;
-}
-
-.bottomPart .floatingText .buttonLink {
-  float: left;
-  font-size: 9pt;
-  background: #1A2328;
-  clear: both;
+.features .feature-box:hover i {
+  background: #4154f1;
   color: #fff;
-  font-family: "Francois One", sans-serif;
-  padding: 10px 20px 10px 20px;
-  letter-spacing: 5px;
-  margin-top: 10px;
-  font-weight: 5px;
-  text-transform: uppercase;
-  transition: all 0.4s ease;
-  -webkit-transition: all 0.4s ease;
-  opacity: 0;
-  transform: translate(-70px, 0px);
-  -webkit-transform: translate(-70px, 0px);
-  position: relative;
-  cursor: pointer;
 }
 
-.bottomPart .floatingText .buttonLink:after {
+.features .feture-tabs {
+  margin-top: 120px;
+}
+
+
+.features .feture-tabs h3 {
+  font-size: 42px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  position: relative;
+  display: block;
+  color: #66fcf1;
+  text-align: center;
+}
+
+.features .feture-tabs h3::before {
   content: '';
-  left: 0px;
   position: absolute;
-  width: calc(100% - 4px);
-  height: calc(100% - 4px);
-  top: 0;
-  left: 0;
-  transition: all 0s ease;
-  -webkit-transition: all 0s ease;
-  border: 2px solid #1A2328;
+  display: block;
+  width: 120px;
+  height: 1px;
+  background: #ddd;
+  bottom: 1px;
+  left: calc(50% - 60px);
 }
 
-.bottomPart .floatingText .buttonLink:hover:after {
-  -webkit-transform: scale(1.2, 1.5);
-          transform: scale(1.2, 1.5);
-  opacity: 0;
-  transition: all 0.2s ease;
-  -webkit-transition: all 0.2s ease;
-}
-
-.bottomPart .floatingText h2 {
-  background: -webkit-linear-gradient(right, #5afacb, #f64655);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-size: 38pt;
-  clear: both !important;
-  float: left;
-  width: auto;
-  letter-spacing: 5px;
-  line-height: 50pt;
-  text-transform: uppercase;
-  font-family: "Francois One", sans-serif;
-  margin-bottom: 10px;
-  transition: all 0.4s ease;
-  -webkit-transition: all 0.4s ease;
-  transition-delay: 0.2s;
-  -webkit-transition-delay: 0.4s;
-  opacity: 0;
-  transform: translate(-70px, 0px);
-  -webkit-transform: translate(-70px, 0px);
-}
-
-.bottomPart .floatingText p {
-  color: #3a3a3a;
-  font-family: "Francois One", sans-serif;
-  width: 500px;
-  float: left;
-  background: rgba(255, 255, 255, 0.7);
-  padding: 5px;
-  clear: both !important;
-  margin: 0px;
-  transition: all 0.4s ease;
-  -webkit-transition: all 0.4s ease;
-  transition-delay: 0.4s;
-  -webkit-transition-delay: 0.4s;
-  opacity: 0;
-  transform: translate(-70px, 0px);
-  -webkit-transform: translate(-70px, 0px);
-}
-
-.bottomPart .floatingText.open h2,
-.bottomPart .floatingText.open p, .bottomPart .floatingText.open .buttonLink {
-  opacity: 1 !important;
-  transform: translate(0px, 0px) !important;
-  -webkit-transform: translate(0px, 0px) !important;
-  transition-delay: 0.2s;
-  -webkit-transition-delay: 0.2s;
-}
-
-.bottomPart .floatingText.open p {
-  transition-delay: 0.4s;
-  -webkit-transition-delay: 0.4s;
-}
-
-.bottomPart .floatingText.open .buttonLink {
-  transition-delay: 0.5s;
-  -webkit-transition-delay: 0.5s;
-}
-
-.bottomPart.reverse {
-  margin-top: 00px;
-  position: relative;
-}
-
-.bottomPart.reverse img {
-  float: left !important;
-  width: 60%;
-}
-
-.bottomPart.reverse .gradLine {
+.features .feture-tabs h3::after {
+  content: '';
   position: absolute;
-  left: 0;
+  display: block;
+  width: 40px;
+  height: 3px;
+  background: #66fcf1;
   bottom: 0;
-  float: left;
-  width: 85% !important;
-  background: -webkit-linear-gradient(left, #5afacb, #f64655);
+  left: calc(50% - 20px);
 }
 
-.bottomPart.reverse .floatingText {
-  padding-right: 7%;
-  top: 20%;
+@media (max-width: 768px) {
+  .features .feture-tabs h3 {
+    font-size: 28px;
+  }
 }
 
-.bottomPart.reverse .floatingText .buttonLink {
-  float: right;
-  transform: translate(50px, 0px) !important;
-  -webkit-transform: translate(50px, 0px);
+.features .feture-tabs .nav-pills {
+  border-bottom: 1px solid #eee;
 }
 
-.bottomPart.reverse .floatingText h2 {
-  background: -webkit-linear-gradient(left, #5afacb, #f64655);
-  width: auto;
-  float: right;
-  text-align: right;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  transform: translate(50px, 0px) !important;
-  -webkit-transform: translate(50px, 0px);
+.features .feture-tabs .nav-link {
+  background: none;
+  text-transform: uppercase;
+  font-size: 15px;
+  font-weight: 600;
+  color: #45a296;
+  padding: 12px 0;
+  margin-right: 25px;
+  margin-bottom: -2px;
+  border-radius: 0;
 }
 
-.bottomPart.reverse .floatingText p {
-  float: right;
-  text-align: right;
-  transform: translate(50px, 0px) !important;
-  -webkit-transform: translate(50px, 0px);
+.features .feture-tabs .nav-link.active {
+  color: #c5c6c7;
+  border-bottom: 3px solid #66fcf1;
+  background: none ;
 }
 
-.bottomPart.reverse .floatingText.open h2,
-.bottomPart.reverse .floatingText.open p,
-.bottomPart.reverse .floatingText.open .buttonLink {
-  opacity: 1 !important;
-  transform: translate(0px, 0px) !important;
-  -webkit-transform: translate(0px, 0px) !important;
-  transition-delay: 0.2s;
-  -webkit-transition-delay: 0.2s;
+.features .feture-tabs .tab-content h4 {
+  font-size: 18px;
+  margin: 0;
+  font-weight: 700;
+  color:#c5c6c7;
 }
 
-.bottomPart.reverse .floatingText.open p {
-  transition-delay: 0.4s;
-  -webkit-transition-delay: 0.4s;
+
+.features .feture-tabs .tab-content p {
+ 
+  color:white;
+}
+.features .feture-tabs .tab-content i {
+  font-size: 24px;
+  line-height: 0;
+  margin-right: 8px;
+  color: #66fcf1;
 }
 
-.bottomPart.reverse .floatingText.open .buttonLink {
-  transition-delay: 0.5s;
-  -webkit-transition-delay: 0.5s;
+.features .feature-icons {
+  margin-top: 120px;
 }
+
+.features .feature-icons h3 {
+  color: white;
+  font-weight: 700;
+  font-size: 32px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+  .features .feature-icons h3 {
+    font-size: 28px;
+  }
+}
+
+
+
+#second_about{
+  padding-right: 30px;
+  margin-top: 50px;
+}
+
+.title-head h4 {
+  font-size: 32px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  position: relative;
+  color: #66fcf1;
+}
+
+.title-head h4::before {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 120px;
+  height: 1px;
+  background: #ddd;
+  bottom: 1px;
+  left: calc(50% - 60px);
+}
+
+.title-head h4::after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 40px;
+  height: 3px;
+  background: #66fcf1;
+  bottom: 0;
+  left: calc(50% - 20px);
+}
+.cont-row{
+  padding-bottom: 15px;
+}
+.cont-row P{
+  color: white;
+}
+
+.cont-row .btn-read-more {
+  line-height: 0;
+  padding: 15px 40px;
+  border-radius: 50px;
+  transition: 0.5s;
+  color: #0b0c10;
+  background: #66fcf1;
+  
+  text-decoration: none;
+}
+
+.cont-row .btn-read-more span {
+  font-family: "Nunito", sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  letter-spacing: 1px;
+}
+
+.cont-row .btn-read-more i {
+  margin-left: 5px;
+  font-size: 18px;
+  transition: 0.3s;
+}
+
+.cont-row .btn-read-more:hover i {
+  transform: translateX(5px);
+  color: #66fcf1;
+  
+}
+.cont-row .btn-read-more:hover {
+  background: black;
+  box-shadow: 0 0 10px 0 #45A29E inset, 0 0 10px 4px #66FCF1;
+  color: #66fcf1;
+}
+
+
 
 
 
@@ -366,7 +331,7 @@ h1 span {
 
   
   .counter{
-    color: #eb3b5a;
+    color: #66FCF1;
     font-family: 'Muli', sans-serif;
     width: 200px;
     height: 200px;
@@ -381,7 +346,7 @@ h1 span {
 .counter:before,
 .counter:after{
     content: "";
-    background: #fff;
+    background: #1f2833;
     width: 80%;
     height: 80%;
     border-radius: 100%;
@@ -393,7 +358,7 @@ h1 span {
     z-index: -1;
 }
 .counter:after{
-    background: linear-gradient(45deg,#B81242 49%, #D74A75 50%);
+    background: linear-gradient(45deg,#66FCF1 49%,#45A29E 50%);
     width: 100%;
     height: 100%;
     box-shadow: none;
@@ -404,8 +369,8 @@ h1 span {
     clip-path: polygon(50% 50%, 50% 0, 100% 0, 100% 100%, 0 100%, 0 50%);
 }
 .counter .counter-icon{
-    color: #fff;
-    background: linear-gradient(45deg,#B81242 49%, #D74A75 50%);
+    color: #0b0c10;
+    background:linear-gradient(45deg,#66FCF1 49%,#45A29E 50%);
     font-size: 33px;
     line-height: 70px;
     width: 70px;
@@ -432,141 +397,133 @@ h1 span {
     font-size: 30px;
     font-weight: 700;
 }
-.counter.orange{ color: #F38631; }
+.counter.orange{ color: #66FCF1; }
 .counter.orange:after,
 .counter.orange .counter-icon{
-    background: linear-gradient(45deg,#F38631 49%,#F8A059 50%);
+    background: linear-gradient(45deg,#66FCF1 49%,#45A29E 50%);
 }
-.counter.green{ color: #88BA1B; }
+.counter.green{ color: #66FCF1; }
 .counter.green:after,
 .counter.green .counter-icon{
-    background: linear-gradient(45deg,#88BA1B 49%,#ACD352 50%);
+    background: linear-gradient(45deg,#66FCF1 49%,#45A29E 50%);
 }
-.counter.blue{ color: #5DB3E4; }
+.counter.blue{ color: #66FCF1; }
 .counter.blue:after,
 .counter.blue .counter-icon{
-    background: linear-gradient(45deg,#5DB3E4 49%,#7EBEE1 50%);
+    background: linear-gradient(45deg,#66FCF1 49%,#45A29E 50%);
 }
 @media screen and (max-width:990px){
     .counter{ margin-bottom: 40px; }
 }
+@media screen and (max-width:576px){
+  .counterbox{ left: 18%;}
+}
   /*--------------------------------------------------------------
   # Services
   --------------------------------------------------------------*/
-  .services {
-    padding-bottom: 30px;
-  }
-  
-  .services .icon-box {
-    margin-bottom: 20px;
-    text-align: center;
-  }
-  
-  .services .icon {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 80px;
-    height: 80px;
-    margin-bottom: 20px;    
-    border-radius: 50%;
-    transition: 0.5s;
-    background: -webkit-linear-gradient(#5afacb, #f64655);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    box-shadow: 0px 0 25px rgba(0, 0, 0, 0.15);
+  section {
+    padding: 60px 0;
     overflow: hidden;
   }
   
-  .services .icon i {
-    font-size: 36px;
-    line-height: 0;
+ 
+  
+  .section-title {
+    text-align: center;
+    padding-bottom: 30px;
   }
   
-  .services .icon-box:hover .icon {
-    box-shadow: 0px 0 30px rgba(66, 139, 202, 0.5);
-  }
-  
-  .services .title {
-    font-weight: 600;
-    margin-bottom: 15px;
-    font-size: 18px;
+  .section-title h2 {
+    font-size: 32px;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
     position: relative;
-    padding-bottom: 15px;
-    
+    color: #66fcf1;
   }
   
-  .services .title a {
-    background: -webkit-linear-gradient(#5afacb, #f64655);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    transition: 0.3s;
-  }
-  
-  .services .title a:hover {
-    background: -webkit-linear-gradient(#5afacb, #f64655);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-  
-  .services .title::after {
+  .section-title h2::before {
     content: '';
     position: absolute;
     display: block;
-    width: 50px;
-    height: 2px;
-    background: -webkit-linear-gradient(#5afacb, #f64655);
-    
-    bottom: 0;
-    left: calc(50% - 25px);
+    width: 120px;
+    height: 1px;
+    background: #ddd;
+    bottom: 1px;
+    left: calc(50% - 60px);
   }
   
-  .services .description {
+  .section-title h2::after {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 40px;
+    height: 3px;
+    background: #66FCF1;
+    bottom: 0;
+    left: calc(50% - 20px);
+  }
+  
+  .section-title p {
+    margin-bottom: 0;
+  }
+
+  .services .icon-box {
+    box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
+    padding: 50px 30px;
+    transition: all ease-in-out 0.4s;
+    background:#0b0c10;
+  }
+  
+  .services .icon-box .icon {
+    margin-bottom: 10px;
+  }
+  
+  .services .icon-box .icon i {
+    color: #c5c6c7;
+    font-size: 36px;
+    transition: 0.3s;
+  }
+  
+  .services .icon-box h4 {
+    font-weight: 500;
+    margin-bottom: 15px;
+    font-size: 24px;
+  }
+  
+  .services .icon-box h4 a {
+    color: #66fcf1;
+    transition: ease-in-out 0.3s;
+  }
+
+  .services .icon-box p {
+    color: #c5c6c7;
+   
+  }
+  
+  .services .icon-box p {
     line-height: 24px;
     font-size: 14px;
+    margin-bottom: 0;
   }
   
+  .services .icon-box:hover {
+    transform: translateY(-10px);
+    text-decoration: none;
+   
+  }
   
-  
+  .services .icon-box:hover h4 a {
+    color: #45a29e;
+    text-decoration: none;
+  }
   
    
-  
-
-
-@media screen and (min-width: 1200px) {
-  .bottomPart h2 {
-    font-size: 55pt !important;
-    line-height: 60pt !important;
-  }
-  .bottomPart p {
-    font-size: 14pt;
-    width: 650px !important;
-  }
+  @media (min-width: 1200px){
+.main-container {
+    padding-left: 80px !important;
+    padding-right: 25px !important;
 }
 
-@media screen and (max-width: 1080px) {
-  .bottomPart .floatingText {
-    top: 40% !important;
-  }
-  .bottomPart.reverse .floatingText {
-    top: 20% !important;
-  }
-}
 
-@media screen and (max-width: 800px) {
-  .bottomPart img {
-    display: none !important;
-  }
-  .bottomPart .floatingText {
-    width: 100% !important;
-    position: relative !important;
-    float: left !important;
-  }
-  .bottomPart .floatingText h2, .bottomPart .floatingText p {
-    float: left !important;
-    width: 100% !important;
-  }
-  .pageWrapper h1 span {
-    max-height: 50px !important;
-  }
-}
