--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -1,10 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Hind:400,700");
 
-img {
-  max-width: 100%;
-  height: auto;
-  display: block;
-}
 
 h3 {
   
@@ -27,8 +22,8 @@ h3 {
   margin-top: 3rem;
   margin-left: 5rem;
   margin-bottom: 50px;
-  background: linear-gradient(-45deg,silver,rgb(255, 255, 255) ,silver);
-background-size: 400% 400%;
+  background: #1f2833 ;
+  background-size: 400% 400%;
 animation: gradient 5s ease infinite;
 box-shadow: 0px 12px 39px -19px rgba(0, 0, 0, 0.75);
   overflow: hidden;
@@ -85,7 +80,7 @@ box-shadow: 0px 12px 39px -19px rgba(0, 0, 0, 0.75);
   position: absolute;
   width: 2px;
   height: 0;
-  background-color: black;
+  background-color: white;
   left: 50%;
   margin: 5px 0 0 -1px;
   transition: height 300ms ease;
@@ -129,6 +124,12 @@ box-shadow: 0px 12px 39px -19px rgba(0, 0, 0, 0.75);
   align-items: center !important;
   justify-content: center !important;
 }
+.time-and-btn .dates{
+  color: #66fcf1;
+}
+.time-and-btn .times{
+  color: #66fcf1;
+}
 /*.carousel-wrapper .carousel .carousel-cell.is-selected .event-logo{
   transform: scale(1.2);
 }*/
@@ -163,7 +164,7 @@ box-shadow: 0px 12px 39px -19px rgba(0, 0, 0, 0.75);
   overflow: hidden;
   top: 0;
   right: 0;
-  background-color: gold;
+  background-color: #66fcf1;
   border-radius: 0 8px 0 80px;
 }
 
@@ -209,7 +210,7 @@ box-shadow: 0px 12px 39px -19px rgba(0, 0, 0, 0.75);
   z-index: -1;
   top: -16px;
   right: -16px;
-  background: gold;
+  background: #66fcf1;
   height: 32px;
   width: 32px;
   border-radius: 32px;
@@ -225,8 +226,8 @@ box-shadow: 0px 12px 39px -19px rgba(0, 0, 0, 0.75);
 
 .is-selected>.card:before {
   transition: transform 0.4s ease-out;
-  -webkit-transform: scale(25);
-          transform: scale(25);
+  -webkit-transform: scale(26);
+          transform: scale(26);
 }
 .is-selected .go-corner{
   transition: 0.3s ease-in;
@@ -247,26 +248,15 @@ box-shadow: 0px 12px 39px -19px rgba(0, 0, 0, 0.75);
     display: block;
     position: relative;
     text-align: center;
-  border-color: #ffdf29;
+  border-color: #66fcf1;
   color: rgb(0, 0, 0);
-  background-color: #ffd700;
+  background-color: #66fcf1;
  /*background-image: linear-gradient(315deg, #facc6b 0%, #fabc3c 74%);*/
   transition: all 150ms ease-in-out;
 
 }
 .viewbtn:hover {
-  background: 	#303030;
-  box-shadow: 0 0 10px 0 #ffdf29 inset, 0 0 10px 4px #ffdf29;
+  background: 	#0b0c10;
+  box-shadow: 0 0 10px 0 #45A29E inset, 0 0 10px 4px #66FCF1;
   color: rgb(255, 255, 255);
 }
-/*.carousel-cell:hover p {
-  -webkit-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-  color: rgba(255, 255, 255, 0.8);
-}
-
-.carousel-cell:hover h3 {
-  -webkit-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-  color: #ffffff;
-}*/
