--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,34 +1,24 @@
 body {
     font-family: "Open Sans", sans-serif;
     color: #272829;
-    background: linear-gradient(-45deg, #ee7752, #f34d8d, #23a6d5, #23d5ab);
+    background: #1f2833;
     background-size: 300% 300%;
-    animation: gradient 15s ease infinite;
+    
 }
 
-@keyframes gradient {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
-}
+
 a {
-    color: #0563bb;
+    color: #66fcf1;
     text-decoration: none;
   }
   
   a:hover {
-    color: #067ded;
+    color: #c5c6c7;
     text-decoration: none;
   }
   
   h1, h2, h3, h4, h5, h6 {
-    font-family: "Raleway", sans-serif;
+    font-family: "Play", sans-serif;
   }
   
   /*--------------------------------------------------------------
@@ -38,8 +28,7 @@ a {
   #hero {
     width: 100%;
     height: 75vh;
-    background-color: white !important;
-    background: url("../img/hero-bg.jpg") no-repeat;
+    background: #0b0c10;
     background-size: cover;
     background-position: 75px;
     padding: 0 15px;
@@ -57,33 +46,60 @@ a {
     z-index: -1;
 }
   
+  #hero .image {
+    height:202px;
+    width:600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  /* #hero .image1 {
+    margin: auto;
+    text-align: center;
+    height:210px;
+    width:500px;
+  }*/
+
   #hero h1 {
     margin: 0 0 10px 0;
-    font-size: 48px;
+    font-size: 64px;
     font-weight: 700;
     line-height: 56px;
     color: rgb(255, 255, 255);
-    text-shadow:0 0 3px  #FFDD03;
+    letter-spacing: 3px;
+    font-family: 'GILC____';
+    font-style: bold;
+  }@font-face {
+    font-family: 'GILC____';
+    font-style: normal;
+    src: url("../fonts/GILC____.TTF");
   }
   
+  
   #hero h2 {
-    color: gold;
+    color:#66fcf1;
     margin-bottom: 10px;
-    font-size: 24px;
+    font-size: 30px;
     font-weight: 300;
-    font-family: "Poppins", sans-serif;
+    font-style: bold;
   }
   
   #hero .btn-get-started {
     font-size: 64px;
     transition: 0.5s;
-    color: #eccb7a;
+    color: #66fcf1;
     height: 60px;
+    padding-top: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   
   #hero .btn-get-started:hover {
     padding-top: 10px;
-    color: #cc9442;
+    color: #c5c6c7;
+    margin: auto;
   }
   
   @media (min-width: 1024px) {
@@ -92,15 +108,46 @@ a {
     }
   }
   
-  @media (max-width: 768px) {
+  @media (max-width: 990px) {
     #hero h1 {
-      font-size: 28px;
-      line-height: 36px;
+      text-align: center;
     }
     #hero h2 {
-      font-size: 18px;
+      text-align: center;
+    }
+    /* #hero .image1 {
+      height: 140px !important;
+      width: 250px !important;
+    } */
+  }
+
+  @media (max-width: 768px) {
+    #hero h1 {
+      font-size: 40px;
+      line-height: 36px;
+      text-align: center;
+    }
+    #hero h2 {
+      font-size: 20px;
       line-height: 24px;
       margin-bottom: 30px;
+      text-align: center;
+    }
+  }
+
+  @media (max-width: 480px) {
+    #hero .image {
+      height: 84px;
+      width: 250px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    #hero .btn-get-started {
+      padding-top: 70px;
+    }
+    #hero .btn-get-started:hover {
+      padding-top: 80px;
     }
   }
   
@@ -160,8 +207,9 @@ a {
     font-weight: 500;
     letter-spacing: 3px;
     text-transform: uppercase;
-    color: white;
-    text-shadow: 0 2px 3px gold;
+    color: #66fcf1;
+    font-style: bold;
+    
   }
   
   .header2 .logo h1 a {
@@ -182,17 +230,17 @@ a {
 
 
 /*   contact section  */
-.section-title p{
-  color: white;
-  font-size: 22px;
-}
+  .section-title p{
+    color: #66fcf1;
+    font-size: 22px;
+  }
   .contact {
     padding-bottom: 80px;
   }
   
   .contact .info-box {
-    color: #444444;
-    background: #fff;
+    color: #ffffff;
+    background: #0b0c10;
     text-align: center;
     
     padding: 20px 0 30px 0;
@@ -200,15 +248,14 @@ a {
   
   .contact .info-box i {
     font-size: 32px;
-    color: #67b0d1;
+    color: #66fcf1;
     border-radius: 50%;
     padding: 8px;
-    border: 2px dotted #f0f7fa;
   }
   
   .contact .info-box h3 {
     font-size: 20px;
-    color: #777777;
+    color: #ffffff;
     font-weight: 700;
     margin: 10px 0;
   }
@@ -223,7 +270,7 @@ a {
   .contact .php-email-form {
     
     padding: 30px;
-    background: #fff;
+    background: #0b0c10;
   }
   
   .contact .php-email-form .error-message {
@@ -275,7 +322,7 @@ a {
   }
   
   .contact .php-email-form input::focus, .contact .php-email-form textarea::focus {
-    background-color: #3452ff;
+    background-color: #66fcf1;
   }
   
   .contact .php-email-form input {
@@ -287,22 +334,23 @@ a {
   }
   
   .contact .php-email-form button[type="submit"] {
-    background: #3452ff;
+    background: #66fcf1;
     border: 0;
     padding: 10px 24px;
-    color: #fff;
+    color: #0b0c10;
     transition: 0.4s;
   }
   
   .contact .php-email-form button[type="submit"]:hover {
-    background: #598eff;
+    background: #45a29e;
+    color: #ffffff;
   }
 
 
   .contact .php-email-form input[type="text"],
   .contact .php-email-form input[type="email"],
   .contact .php-email-form textarea{
-    background:#c3e4fafd;
+    background:#ffffff;
     color: gray !important;
   }
   
