--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,117 +1,155 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
 
-.footer-dark {
-    font-family: "Dosis", sans-serif;
-    letter-spacing: 1px;
-    line-height: 1.7em;
-    padding:50px 0;
-    color:#f0f9ff;
-    background-color:#282d32;
-  }
-  
-  .footer-dark h3{
-    margin-top:0;
-    margin-bottom:12px;
-    font-weight:bold;
-    font-size:16px;
-    color:white;
-  }
-
-  .footer-dark h3 a{
-    margin-top:0;
-    margin-bottom:12px;
-    font-weight:bold;
-    font-size:16px;
-    color:white;
-  }
-
-  .footer-dark h3 a:hover{
-      text-decoration: none;
-  }
-  
-  .footer-dark ul {
-    padding:0;
-    list-style:none;
-    line-height:1.6;
-    font-size:14px;
-    margin-bottom:0;
-  }
-  
-  .footer-dark ul a {
-    color:inherit;
-    text-decoration:none;
-    opacity:0.6;
-  }
-  
-  .psg{
-    width: 53px;
-    margin-right: 1em;
-  }
-
-  @media (max-width:767px) {
-    .footer-dark .item:not(.social) {
-      text-align:center;
-      padding-bottom:20px;
-    }
-  }
-  
-  .footer-dark .item.text {
-    margin-bottom:36px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  @media (max-width:767px) {
-    .footer-dark .item.text {
-      margin-bottom:0;
-    }
-  }
-  
-  .footer-dark .item.text p {
-    opacity:0.6;
-    margin-bottom:0;
-  }
-  
-  .footer-dark .item.social {
-    text-align:center;
-  }
-  
-  @media (max-width:991px) {
-    .footer-dark .item.social {
-      text-align:center;
-      margin-top:20px;
-    }
-  }
-  
-.colu1 , .colu2{
-  text-align:center;
+.footer {
+  background: #0B0C10;
 }
 
-  .footer-dark .item.social > a {
-    font-size:20px;
-    width:36px;
-    height:36px;
-    line-height:36px;
-    display:inline-block;
-    text-align:center;
-    border-radius:50%;
-    
-    margin:0 8px;
-    color:#fff;
-    opacity:0.75;
-  }
-  
-  .footer-dark .item.social > a:hover {
-    opacity:0.9;
-    box-shadow: 0 0 7px #ffdf00;
-  }
-  
-  .footer-dark .copyright {
-    text-align:center;
-    padding-top:24px;
-    opacity:0.3;
-    font-size:13px;
-    margin-bottom:0;
-  }
+.footer__top {
+  padding: 30px 0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.footer__top__logo {
+  line-height: 40px;
+}
+.footer__top__logo a {
+  display: inline-block;
+}
+
+.footer__top__social {
+  text-align: left;
+}
+.footer__top__social a {
+  display: inline-block;
+  font-size: 15px;
+  color: #66fcf1;
+  height: 40px;
+  width: 40px;
+  background: #1f2833;
+  border-radius: 50%;
+  line-height: 44px;
+  text-align: center;
+  margin-right: 6px;
+}
+.footer__top__social a :hover {
+  color: #c5c6c7;
+}
+.footer__top__social a:last-child {
+  margin-right: 0;
+}
+
+.footer__option {
+  padding-bottom: 0px;
+  padding-top: 55px;
+}
+
+.footer__option__item {
+  margin-bottom: 35px;
+}
+.footer__option__item h5 {
+  color: #66fcf1;
+  font-weight: 700;
+  margin-bottom: 35px;
+  text-align:left;
+  padding-left: 20%;
+  justify-content: center;
+}
+.footer__option__item h6 {
+  color: #66fcf1;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+.footer__option__item p {
+  color: #c5c6c7;
+  font-weight: 300;
+  margin-bottom: 20px;
+  text-align: justify;
+}
+.footer__option__item .read__more {
+  font-size: 16px;
+  color: #c5c6c7;
+}
+.footer__option__item .read__more:hover {
+  color: #66fcf1;
+}
+.footer__option__item .read__more span {
+  font-size: 16px;
+  color: #c5c6c7;
+  opacity: 0.5;
+  position: relative;
+  top: 4px;
+  margin-left: 5px;
+}
+.footer__option__item .read__more span:hover {
+  color: #66fcf1;
+}
+.footer__option__item ul li {
+  list-style: none;
+}
+.footer__option__item ul li a {
+  color: #c5c6c7;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 32px;
+  text-align: left;
+}
+.footer__option__item ul li a:hover {
+  color: #66fcf1;
+}
+.footer__option__item form {
+  position: relative;
+}
+.footer__option__item form input {
+  height: 50px;
+  width: 100%;
+  padding-left: 20px;
+  border: 1px solid #544e5e;
+  background: transparent;
+  font-size: 16px;
+  color: #adadad;
+}
+.footer__option__item form input::-webkit-input-placeholder {
+  color: #adadad;
+}
+.footer__option__item form input::-moz-placeholder {
+  color: #adadad;
+}
+.footer__option__item form input:-ms-input-placeholder {
+  color: #adadad;
+}
+.footer__option__item form input::-ms-input-placeholder {
+  color: #adadad;
+}
+.footer__option__item form input::placeholder {
+  color: #adadad;
+}
+.footer__option__item form button {
+  font-size: 20px;
+  color: #ffffff;
+  border: none;
+  height: 50px;
+  width: 50px;
+  background: #00bfe7;
+  line-height: 50px;
+  text-align: center;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.footer__copyright {
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  padding: 30px 0;
+}
+
+.footer__copyright__text {
+  margin-bottom: 0;
+  font-weight: 300;
+}
+.footer__copyright__text i {
+  color: #00bfe7;
+}
+.footer__copyright__text a {
+  color: #00bfe7;
+}
