--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -4,8 +4,6 @@ html {
 }
 
 body {
-  
-
   margin: 0;
   height: 100%;
   display: -webkit-box;
@@ -23,7 +21,13 @@ body {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  background: 	#303030;
+  background: 	#0B0C10;
+}
+
+.scrollin {
+  max-height:250px;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 
@@ -74,10 +78,11 @@ body {
 
 .card {
   font-family: "Open Sans", sans-serif;
-  background: #191919;
+  background: #1F2833;
   position: absolute;
   -webkit-transition: 0.3s ease all;
   transition: 0.3s ease all;
+  border-radius: 4px;
 }
 
 .card-body {
@@ -86,13 +91,27 @@ body {
 }
 .card-body p {
   color: #f7f7f7; 
-  font-size: 15px;
-  text-shadow:0 0 3px #FFDD03;
+  font-size: 17px;
+  text-shadow:0 0 3px #6aeeff;
+}
+.card-body .itext {
+  color: #f7f7f7; 
+  font-size: 14px;
+  text-shadow:0 0 3px #6aeeff;
+  padding: 10px 0 10px 0;
+}
+.card-body #file {
+  align-items: center;
+  padding: 10px 0 10px 0;
 }
 
 
 .enterlogin{
-  padding-bottom: 18px;
+  padding: 10px 8px 18px 8px;
+  color: #f7f7f7; 
+  font-size: 15px;
+  text-shadow:0 0 3px #6aeeff;
+  text-align: center;
 }
 
 .box-btn {
@@ -101,8 +120,8 @@ body {
   
   text-transform: uppercase;
   display: block;
-  padding: 20px 0 10px 0;
-  font-size: 10px;
+  padding: 20px 0 20px 0;
+  font-size: 13px;
   font-weight: 500;
   background: rgba(0, 0, 0, 0);
   -webkit-transition: 0.2s ease all;
@@ -113,16 +132,15 @@ body {
 
 .box-btn:hover {
   text-decoration: underline;
+  cursor: pointer;
 }
 
-.box-btn:active {
-  background: rgb(46, 139, 87);
-}
+
 
 .input-group {
   /*border: 2px solid #3498db;*/
   position: relative;
-  background: #191919;
+  background: #1F2833;
   margin: 1px 0;
   border-radius: 2px;
   overflow: hidden;
@@ -141,26 +159,19 @@ body {
   padding: 10px 10px;
   width: 200px;
   outline: none;
-  color: white;
+  color: #ffffff;
   border-radius: 24px;
   transition: 0.25s
 }
 
 .input-group   :focus{
   width: 230px;
-    border-color: 	#ffdf29;
+    border-color: #66fcf1;
 
 }
-.input-group label {
-  position: absolute;
-  top: 10px;
-  left: 0;
-  padding-left: 10px;
-  font-weight: 500;
-  color: #aaa;
-}
 
-.card-footer button {
+
+.submitBtn{
   border-radius: 24px;
   padding: 14px 40px;
     outline: none;
@@ -168,16 +179,16 @@ body {
     display: block;
     margin: 0px 20px 20px 20px;
     text-align: center;
-  border-color: #ffdf29;
+  border-color: #45A29E;
   color: rgb(0, 0, 0);
-  background-color: #ffd700;
+  background-color: #66FCF1;
  /*background-image: linear-gradient(315deg, #facc6b 0%, #fabc3c 74%);*/
   transition: all 150ms ease-in-out;
 
 }
-.card-footer button:hover {
+.submitBtn:hover {
   background: 	#303030;
-  box-shadow: 0 0 10px 0 #ffdf29 inset, 0 0 10px 4px #ffdf29;
+  box-shadow: 0 0 10px 0 #45A29E inset, 0 0 10px 4px #66FCF1;
   color: rgb(255, 255, 255);
 }
 .above {
@@ -329,9 +340,16 @@ body {
 }
 /*# sourceMappingURL=login.css.map */
 
+/*.below{
+  width: 150px;
+  height: 140px;
+  overflow: hidden;
+}*/
 
-
-#add_err1 , #add_err2{
+#add_err1 , #add_err2, #add_err4{
+  color: white;
+}
+#add_err2 p{
   color: white;
 }
 
@@ -355,19 +373,20 @@ body {
 input[type="checkbox"] {
   visibility: hidden;
 }
-input[type="checkbox"]:checked + label {
+input[type="checkbox"]:checked + #toglabel {
   transform: rotate(360deg);
   background-color: #000;
 }
-input[type="checkbox"]:checked + label:before {
+input[type="checkbox"]:checked + #toglabel:before {
   transform: translateX(30px);
   background-color: #FFF;
 }
-label {
+#toglabel {
   display: flex;
   width: 60px;
   height: 30px;
   border: 6px solid;
+  border-color: #66FCF1;
   border-radius: 99em;
   position: absolute;
   transition: transform 0.75s ease-in-out;
@@ -377,7 +396,7 @@ label {
   top: 18%;
   
 }
-label:before {
+#toglabel:before {
   transition: transform 0.75s ease;
   transition-delay: 0.5s;
   content: "";
@@ -385,8 +404,55 @@ label:before {
   position: absolute;
   width: 15px;
   height: 14px;
-  background-color: #000;
+  background-color: #fff;
   border-radius: 50%;
   top: 2px;
   left: 2px;
+}
+
+#fgtpassform {
+  display: none;
+  align-items: center;
+}
+.pad-ten {
+  margin-top: 20px;
+}
+
+#file{
+  background: none;
+  display: block;
+  margin: 10px auto;
+  text-align: center;
+  border: 2px solid #C8CACA;
+  padding: 10px 10px;
+  width: 200px;
+  outline: none;
+  color: #ffffff;
+  border-radius: 24px;
+  transition: 0.25s;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  cursor: pointer;
+  
+  
+}
+/*
+#file:hover .button-wrap {
+  width: 230px;
+  border-color: 	#1897ff;
+
+}*/
+
+.upload::-webkit-file-upload-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: none;
+  border: 0;
+  outline: 0;
+  color: #ffffff;
+}
+.upload:focus::-webkit-file-upload-button {
+  color: gray;
 }
