--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -5,22 +5,26 @@
     right: 15px;
     bottom: 15px;
     z-index: 996;
-    background: gold;
+    background: #66fcf1;
     width: 40px;
     height: 40px;
     border-radius: 50px;
-    transition: all 0.4s;
+    transition: all 0.3s;
   }
   
   .back-to-top i {
     font-size: 28px;
-    color: #000000;
+    color: black;
     line-height: 0;
   }
   
   .back-to-top:hover {
-    background: #d8a31c;
+    background: #45a29e;
     color: #fff;
+  }
+  .back-to-top:hover i{
+    color: #fff;
+    transition: all 0.3s;
   }
   
   .back-to-top.active {
@@ -93,13 +97,13 @@
   .nav-menu a {
     display: flex;
     align-items: center;
-    color: #45505b;
+    color: #66fcf1;
     padding: 10px 18px;
     margin-bottom: 8px;
     transition: 0.3s;
     font-size: 15px;
     border-radius: 50px;
-    background: #f2f3f5;
+    background: black;
     height: 56px;
     width: 100%;
     overflow: hidden;
@@ -112,7 +116,7 @@
   
   .nav-menu a span {
     padding: 0 5px 0 7px;
-    color: #45505b;
+    color: #66fcf1;
   }
   
   @media (min-width: 1202px) {
@@ -127,7 +131,7 @@
   
   .nav-menu a:hover, .nav-menu .active, .nav-menu li:hover > a {
     color: rgb(0, 0, 0);
-    background: gold;
+    background: #66fcf1;
   }
   
   .nav-menu a:hover span, .nav-menu .active span, .nav-menu li:hover > a span {
@@ -160,6 +164,7 @@
     cursor: pointer;
     border-radius: 50px;
     padding: 5px;
+    color:#66fcf1;
   }
   
   .mobile-nav-toggle i {
@@ -175,7 +180,7 @@
   }
   
   .mobile-nav-active .mobile-nav-toggle {
-    color: #fff;
+    color: #45a29e;
     background-color: #f6f6f6;
   }
 
