--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -1,192 +1,100 @@
-body {
-    background-color: #f9f9fa;
+body{
+    text-align: left;
+    background-color: #1f2833;    
+   
 }
+
+h4, h6 {
+    color: #66fcf1;
+}
+ul {
+    list-style-type: circle;
+    color: #66fcf1;
+}
+
+ul li {
+    color: white;
+}
+hr {
+    color : #66fcf1;
+}
+.text-secondary, .text-muted{
+    color:white !important;
+}
+.text-info {
+    color:#66fcf1 !important;
+}
+
 
 .backbtn {
     position: absolute;
     right:15px;
-    width: 40px !important;
-    height: 40px;
+    width: 45px !important;
+    height: 45px;
     border-radius: 50%;
     padding:6px;
-    background-color:#FF416C;
-    color:white;
+    background-color:#66fcf1;
+    color:black;
     font-size:1.03em
   }
 
-  .header2 {
-    transition: all 0.5s;
-    z-index: 997;
-    transition: all 0.5s;
-    height: 60px;
-    background: #000;
-    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.12);
-  }
 
+.col-md-4{
+  padding-top: 19px;
   
-  
-  .header2 .logo h1 {
-    font-size: 26px;
-    margin: 0;
-    padding: 6px 0;
-    line-height: 1;
-    font-weight: 500;
-    letter-spacing: 3px;
-    text-transform: uppercase;
-    color: white;
-    text-shadow: 0 2px 3px gold;
-  }
-  
-  .header2 .logo h1 a {
-    color: #ffffff;
-    text-decoration: none;
-    text-shadow: 0 0 7px ;
-  }
-  
-  .header2 .logo img {
-    padding: 0;
-    margin: 0;
-    max-height: 40px;
-  }
-  
-  
-.padding {
-    padding: 3rem !important
 }
-
-.user-card-full {
-    overflow: hidden
+.col-md-8{
+  padding-top: 20px;
 }
-
+.main-body {
+    padding: 15px;
+    margin-top: 50px;
+}
 .card {
-    border-radius: 5px;
-    -webkit-box-shadow: 0 1px 20px 0 rgba(69, 90, 100, 0.08);
-    box-shadow: 0 1px 20px 0 rgba(69, 90, 100, 0.08);
-    border: none;
-    margin-bottom: 30px
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
+}
+.minheight {
+    min-height: 280px;
+}
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #0b0c10;
+    background-clip: border-box;
+    border: 1px solid #66fcf1;
+    border-radius: .25rem;
+    margin-bottom: 20px;
 }
 
-.m-r-0 {
-    margin-right: 0px
+.card-body {
+    flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1rem;
 }
 
-.m-l-0 {
-    margin-left: 0px
+.gutters-sm {
+    margin-right: -8px;
+    margin-left: -8px;
+   
 }
 
-.user-card-full .user-profile {
-    border-radius: 5px 0 0 5px
+.gutters-sm>.col, .gutters-sm>[class*=col-] {
+    padding-right: 8px;
+    padding-left: 8px;
+}
+.mb-3, .my-3 {
+    margin-bottom: 1rem!important;
 }
 
-.bg-c-lite-green {
-    background: -webkit-gradient(linear, left top, right top, from(#f29263), to(#ee5a6f));
-    background: linear-gradient(to right, #ee5a6f, #f29263)
+.bg-gray-300 {
+    background-color: #45A29E;
 }
-
-.user-profile {
-    padding: 20px 0
+.h-100 {
+    height: 100%!important;
 }
-
-.card-block {
-    padding: 1.25rem
+.shadow-none {
+    box-shadow: none!important;
 }
-
-.m-b-25 {
-    margin-bottom: 25px
-}
-
-.img-radius {
-    border-radius: 5px
-}
-
-h6 {
-    font-size: 14px
-}
-
-.card .card-block p {
-    line-height: 25px
-}
-
-@media only screen and (min-width: 1400px) {
-    p {
-        font-size: 14px
-    }
-}
-
-@media (max-width: 450px){
-    .padding {
-        padding: 12px
-    }
-}
-
-.card-block {
-    padding: 1.25rem
-}
-
-.b-b-default {
-    border-bottom: 1px solid #e0e0e0
-}
-
-.m-b-20 {
-    margin-bottom: 20px
-}
-
-.p-b-5 {
-    padding-bottom: 5px !important
-}
-
-.card .card-block p {
-    line-height: 25px
-}
-
-.m-b-10 {
-    margin-bottom: 10px
-}
-
-.text-muted {
-    color: #919aa3 !important
-}
-
-.b-b-default {
-    border-bottom: 1px solid #e0e0e0
-}
-
-.f-w-600 {
-    font-weight: 600
-}
-
-.m-b-20 {
-    margin-bottom: 20px
-}
-
-.m-t-40 {
-    margin-top: 20px
-}
-
-.p-b-5 {
-    padding-bottom: 5px !important
-}
-
-.m-b-10 {
-    margin-bottom: 10px
-}
-
-.m-t-40 {
-    margin-top: 20px
-}
-
-.user-card-full .social-link li {
-    display: inline-block
-}
-
-.user-card-full .social-link li a {
-    font-size: 20px;
-    margin: 0 10px 0 0;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-}
-
-.card-block .row{
-    padding-bottom: 20px !important;
-}
-
